# disp-lab2

./: .clang-format  docker-compose.yml
.github/workflows/: classroom.yml
postgres/: 20-create-databases.sh  30-create_test_database.sh  create_test_database.sh
src/: CMakeLists.txt
src/NetLib/: CMakeLists.txt
src/NetLib/connections/: client_server_connection.cpp
src/NetLib/sessions/: http_client_server_session.cpp
src/api-gateway/: ApiGatewayHandler.cpp  CMakeLists.txt  api-gateway.yaml  clients.h  main.cpp
src/api-gateway/context/: ApiGatewayContext.h
src/api-gateway/dto/: CarAvailabilityDTO.cpp  CarDTO.cpp  CarDTO.h  GetRentDTO.cpp  GetRentDTO.h  PaymentDTO.cpp  PostRentResultDTO.cpp  RentDTO.h
src/api-gateway/routes/: CancelRentRoute.cpp  FinishRentRoute.cpp  GetCarRoute.cpp  GetCarRoute.h  GetCarsRoute.cpp  GetCarsRoute.h  GetPaymentRoute.cpp  GetPaymentRoute.h  GetRentPost.cpp  GetRentPost.h  GetRentPrep.cpp  GetRentPrep.h  GetRentRoute.cpp  GetRentRoute.h  GetRentsRoute.cpp  GetRentsRoute.h  PostPaymentRoute.cpp  UpdateCarAvailabilityRoute.cpp
src/cars-service/: CMakeLists.txt  cars.yaml
src/cars-service/bl/: CarsFacade.cpp  CarsFacade.h
src/cars-service/da/: ICarsRepository.h  PostgresCarsRepository.cpp  PostgresCarsRepository.h
src/cars-service/dto/: CarAvailabilityDTO.h  CarDTO.cpp
src/cars-service/gateway/: CarsGateway.cpp  CarsServerHandler.cpp
src/payments-service/: CMakeLists.txt  payments.yaml
src/payments-service/bl/: PaymentsFacade.cpp  PaymentsFacade.h
src/payments-service/da/: IPaymentsRepository.h  PostgresPaymentsRepository.cpp  PostgresPaymentsRepository.h
src/payments-service/dto/: PaymentDTO.cpp  PaymentDTO.h
src/payments-service/gateway/: PaymentsGateway.cpp
src/rental-service/: CMakeLists.txt  rents.yaml
src/rental-service/bl/: RentsFacade.cpp  RentsFacade.h
src/rental-service/da/: IRentsRepository.h  RentsDA.h  (+2 more)
(+9 files in other folders)
